test_regress/t/t_vlt_warn_ecode_bad.out
%Error: t/t_vlt_warn_ecode_bad.vlt:9:1: Unknown error code: 'BADRULENAME'
    9 | lint_off -rule BADRULENAME -file "t/t_vlt_warn.v"
      | ^~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_vlt_warn_ecode_bad.vlt:10:1: Unknown error code: 'BADRULENAME'
   10 | lint_on -rule BADRULENAME -file "t/t_vlt_warn.v"
      | ^~~~~~~
%Error: Exiting due to
